cmake_minimum_required(VERSION 3.15 FATAL_ERROR)\n\nproject(UnderVol VERSION 1.0.0)\n\nset(CMAKE_CXX_STANDARD 17)\nset(CMAKE_CXX_STANDARD_REQUIRED ON)\n\n# Set JUCE path\nset(JUCE_PATH "<path_to_juce>")\n\ninclude(${JUCE_PATH}/JUCE.cmake)\n\n# Add sources\nset(SOURCES\n    Source/PluginProcessor.cpp\n    Source/PluginEditor.cpp\n)\n\n# Create the VST3 target\njuce_add_plugin(UnderVol\n    COMPANY_NAME "Your Company"\n    PLUGIN_NAME "UnderVol"\n    PLUGIN_TYPE VST3\n    PLUGIN_IS_SYNTH TRUE\n    PLUGIN_CODE "Under"\n    VERSION ${PROJECT_VERSION}\n    SOURCES ${SOURCES}\n)\n\n# Specify any additional dependencies here\n# target_link_libraries(UnderVol PRIVATE ...)\n\n# Include directories for JUCE\ntarget_include_directories(UnderVol PRIVATE ${JUCE_PATH})\n\n# Set the output directory\nset_target_properties(UnderVol PROPERTIES\n    BUNDLE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin\n)\n\n# Optionally add resources or assets\n
